feat: update styling for improved layout and readability in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,21 @@
 <title>Redirecting…</title>
 <style>
 	body {
-		font: 14px system-ui;
-		margin: 24px;
-		color: #333
+		font: 22px system-ui, sans-serif;
+		margin: 0;
+		color: #333;
+		min-height: 100vh;
+		display: flex;
+		flex-direction: column;
+		align-items: center;
+		justify-content: center;
+		background: #f8fafc;
 	}
 	.hint {
-		opacity: .7
+		opacity: .7;
+		font-size: 1rem;
+		margin-top: 1em;
+		color: #666;
 	}
 </style>
 
