feat: remove close timing parameters from redirection methods in example index.html

--- a/examples/index.html
+++ b/examples/index.html
@@ -9,20 +9,20 @@
 </head>
 <body>
   <h1>Redirection Hub Demo</h1>
-  <p>This is a demonstration of various redirection methods to be handled by the Redirection Hub. The auto-close timing is set to 5 seconds for testing.</p>
+  <p>This is a demonstration of various redirection methods to be handled by the Redirection Hub.</p>
 
   <h2>1. Redirection using window.open()</h2>
-  <button onclick="window.open('../?via=open&close_after_ms=5000', '_blank')">
+  <button onclick="window.open('../?via=open', '_blank')">
     Open in New Tab
   </button>
 
   <h2>2. Redirection using window.location.href</h2>
-  <button onclick="window.location.href='../?via=href&close_after_ms=5000'">
+  <button onclick="window.location.href='../?via=href'">
     Go to Another Page
   </button>
 
   <h2>3. Redirection via window.location.replace</h2>
-  <button onclick="window.location.replace('../?via=replace&close_after_ms=5000')">
+  <button onclick="window.location.replace('../?via=replace')">
 	Replace Current Page
   </button>
 
